workspace = { members = ["tlang_macros"] }
[package]
name = "tlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
ahash = "0.8.11"
bumpalo = "3.16.0"
getopts = "0.2.21"
indexmap = "2.2.6"
lalrpop-util = "0.20.2"
logos = "0.14.0"
snailquote = "0.3.1"
tlang_macros = { path = "./tlang_macros" }
