workspace = { members = ["tlang_macros"] }
[package]
name = "tlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
ahash = "0.8.11"
allocator-api2 = "0.2.18"
bitflags = "2.6.0"
bumpalo = "3.16.0"
getopts = "0.2.21"
hashbrown = { version = "0.14.5", features = ["raw"] }
index_vec = "0.1.3"
lalrpop-util = "0.20.2"
logos = "0.14.0"
rustix = { version = "0.38.34", features = ["mm"], default-features = false }
serde = { version = "1.0.205", features = ["serde_derive"] }
snailquote = "0.3.1"
static_assertions = "1.1.0"
tlang_macros = { path = "./tlang_macros" }
